--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
         The data used in this project come from World Health Organization(WHO). </p>
     </div>
 
-    <div class="">
-      <select class="selected" name="sorting"></select>
-      <button type="button" name="button" class="buttons">Play</button>
+    <div class="buttonLine">
+      
     </div>
 
   </div>
